working on header

--- a/index.html
+++ b/index.html
@@ -46,45 +46,63 @@
   <body>
     <!-- header section starts  -->
     <header id="header">
-      <section class="top">
-        <div class="profile">
-          <img src="./img/avatar.png" alt="avatar_agent_id" class="avatar" />
-          <span class="agentName">kiron</span>
-        </div>
-        <!-- /.profile -->
-
-        <ul class="callStatus">
-          <li class="status">
-            Status : <span class="count">acw (00:00:00)</span>
-          </li>
-          <li class="status">Login : <span class="count">00:00:00</span></li>
-          <li class="status">Calling : <span class="count">00:00:00</span></li>
-        </ul>
-        <!-- /.callStatus -->
-        <div class="logo">
-          <img src="./img/logo.png" alt="avatar_agent_id" class="img" />
-        </div>
-        <!-- /.logo -->
-      </section>
-      <!-- /.top -->
-      <section class="top">
-        <div class="profile">
-          <span class="agentName">iHelpBD</span>
-        </div>
-        <!-- /.profile -->
-
-        <ul class="callStatus">
-          <li class="status">
-            Status : <span class="count">acw (00:00:00)</span>
-          </li>
-          <li class="status">Login : <span class="count">00:00:00</span></li>
-          <li class="status">Calling : <span class="count">00:00:00</span></li>
-        </ul>
-        <!-- /.callStatus -->
-        <div class="logo">Inbound</div>
-        <!-- /.logo -->
-      </section>
-      <!-- /.top -->
+      <main class="container">
+        <section class="box left">
+          <div class="profile">
+            <img src="./img/avatar.png" alt="avatar_agent_id" class="avatar" />
+            <span class="agentName">Mr. kiron</span>
+          </div>
+          <!-- /.profile -->
+          <div class="skill">Outbound</div>
+          <!-- /.skill -->
+        </section>
+        <!-- /.box -->
+        <section class="box widgets">
+          <ul class="callStatus">
+            <li class="status">
+              Status : <span class="count">acw (00:10:11)</span>
+            </li>
+            <li class="status">
+              Login :
+              <span class="count"> 01:11:11</span>
+            </li>
+            <li class="status">
+              Calling :
+              <span class="count">00:01:10</span>
+            </li>
+          </ul>
+          <!-- /.callStatus -->
+          <ul class="widgetIcons">
+            <li class="iconItem">
+              <i class="fa-solid fa-star icon"></i>
+            </li>
+            <li class="iconItem">
+              <i class="fa-solid fa-star icon"></i>
+            </li>
+            <li class="iconItem">
+              <i class="fa-solid fa-star icon"></i>
+            </li>
+            <li class="iconItem">
+              <i class="fa-solid fa-star icon"></i>
+            </li>
+            <li class="iconItem">
+              <i class="fa-solid fa-star icon"></i>
+            </li>
+          </ul>
+          <!-- /.widgetIcons -->
+        </section>
+        <!-- /.box -->
+        <section class="box right">
+          <div class="logo">
+            <img src="./img/logo.png" alt="avatar_agent_id" class="img" />
+          </div>
+          <!-- /.logo -->
+          <div class="brand">iHelpBD</div>
+          <!-- /.skill -->
+        </section>
+        <!-- /.box -->
+      </main>
+      <!-- /.container -->
     </header>
     <!-- header section ends -->
   </body>
