added widget icons

--- a/index.html
+++ b/index.html
@@ -74,19 +74,47 @@
           <!-- /.callStatus -->
           <ul class="widgetIcons">
             <li class="iconItem">
-              <i class="fa-solid fa-star icon"></i>
+              <img
+                src="./img/pause_button.png"
+                alt="pause_button"
+                class="img"
+              />
             </li>
             <li class="iconItem">
-              <i class="fa-solid fa-star icon"></i>
+              <img src="./img/microphone.png" alt="pause_button" class="img" />
             </li>
             <li class="iconItem">
-              <i class="fa-solid fa-star icon"></i>
+              <img src="./img/hold_button.png" alt="pause_button" class="img" />
             </li>
             <li class="iconItem">
-              <i class="fa-solid fa-star icon"></i>
+              <img
+                src="./img/disconnect_button.png"
+                alt="pause_button"
+                class="img"
+              />
             </li>
             <li class="iconItem">
-              <i class="fa-solid fa-star icon"></i>
+              <img src="./img/dispo.png" alt="pause_button" class="img" />
+            </li>
+            <li class="iconItem">
+              <img
+                src="./img/email_button.png"
+                alt="pause_button"
+                class="img"
+              />
+            </li>
+            <li class="iconItem">
+              <img src="./img/sms_button.png" alt="pause_button" class="img" />
+            </li>
+            <li class="iconItem">
+              <img
+                src="./img/ticket_button.png"
+                alt="pause_button"
+                class="img"
+              />
+            </li>
+            <li class="iconItem">
+              <img src="./img/back.png" alt="pause_button" class="img" />
             </li>
           </ul>
           <!-- /.widgetIcons -->
