header design done

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <!-- /.skill -->
         </section>
         <!-- /.box -->
-        <section class="box widgets">
+        <section class="box center">
           <ul class="callStatus">
             <li class="status">
               Status : <span class="count">acw (00:10:11)</span>
@@ -77,44 +77,73 @@
               <img
                 src="./img/pause_button.png"
                 alt="pause_button"
+                title="Pause Button"
                 class="img"
               />
             </li>
             <li class="iconItem">
-              <img src="./img/microphone.png" alt="pause_button" class="img" />
+              <img
+                src="./img/microphone.png"
+                alt="microphone"
+                title="microphone Button"
+                class="img"
+              />
             </li>
             <li class="iconItem">
-              <img src="./img/hold_button.png" alt="pause_button" class="img" />
+              <img
+                src="./img/hold_button.png"
+                alt="hold_button"
+                title="Hole Button"
+                class="img"
+              />
             </li>
             <li class="iconItem">
               <img
                 src="./img/disconnect_button.png"
-                alt="pause_button"
+                alt="disconnect_button"
+                title="Disconnect Button"
                 class="img"
               />
             </li>
             <li class="iconItem">
-              <img src="./img/dispo.png" alt="pause_button" class="img" />
+              <img
+                src="./img/dispo.png"
+                alt="dispo"
+                title="Dispo Button"
+                class="img"
+              />
             </li>
             <li class="iconItem">
               <img
                 src="./img/email_button.png"
-                alt="pause_button"
+                alt="email_button"
+                title="Email Button"
                 class="img"
               />
             </li>
             <li class="iconItem">
-              <img src="./img/sms_button.png" alt="pause_button" class="img" />
+              <img
+                src="./img/sms_button.png"
+                alt="sms_button"
+                title="Pause Button"
+                class="img"
+              />
             </li>
             <li class="iconItem">
               <img
                 src="./img/ticket_button.png"
-                alt="pause_button"
+                alt="ticket_button"
+                title="Ticket Button"
                 class="img"
               />
             </li>
             <li class="iconItem">
-              <img src="./img/back.png" alt="pause_button" class="img" />
+              <img
+                src="./img/back.png"
+                alt="back"
+                title="Back Button"
+                class="img"
+              />
             </li>
           </ul>
           <!-- /.widgetIcons -->
