applied fontawesome icon for widgetIcons

--- a/index.html
+++ b/index.html
@@ -74,76 +74,46 @@
           <!-- /.callStatus -->
           <ul class="widgetIcons">
             <li class="iconItem">
-              <img
+              <i class="fa-solid fa-play icon"></i>
+              <!-- <img
                 src="./img/pause_button.png"
                 alt="pause_button"
                 title="Pause Button"
                 class="img"
-              />
+              /> -->
             </li>
             <li class="iconItem">
-              <img
-                src="./img/microphone.png"
-                alt="microphone"
-                title="microphone Button"
-                class="img"
-              />
+              <i
+                class="fa-solid fa-microphone icon"
+                title="Microphone Button"
+              ></i>
             </li>
             <li class="iconItem">
-              <img
-                src="./img/hold_button.png"
-                alt="hold_button"
-                title="Hole Button"
-                class="img"
-              />
+              <i class="fa-solid fa-pause icon" title="Hole Button"></i>
             </li>
             <li class="iconItem">
-              <img
-                src="./img/disconnect_button.png"
-                alt="disconnect_button"
+              <i
+                class="fa-solid fa-plug-circle-xmark icon"
                 title="Disconnect Button"
-                class="img"
-              />
+              ></i>
             </li>
             <li class="iconItem">
-              <img
-                src="./img/dispo.png"
-                alt="dispo"
-                title="Dispo Button"
-                class="img"
-              />
+              <i class="fa-solid fa-ear-listen icon" title="Dispo Button"></i>
             </li>
             <li class="iconItem">
-              <img
-                src="./img/email_button.png"
-                alt="email_button"
-                title="Email Button"
-                class="img"
-              />
+              <i class="fa-regular fa-envelope icon" title="Email Button"></i>
             </li>
             <li class="iconItem">
-              <img
-                src="./img/sms_button.png"
-                alt="sms_button"
-                title="Pause Button"
-                class="img"
-              />
+              <i class="fa-solid fa-comment-sms icon" title="SMS Button"></i>
             </li>
             <li class="iconItem">
-              <img
-                src="./img/ticket_button.png"
-                alt="ticket_button"
-                title="Ticket Button"
-                class="img"
-              />
+              <i class="fa-solid fa-ticket icon" title="Ticket Button"></i>
             </li>
             <li class="iconItem">
-              <img
-                src="./img/back.png"
-                alt="back"
-                title="Back Button"
-                class="img"
-              />
+              <i
+                class="fa-solid fa-right-from-bracket icon"
+                title="Sign Out"
+              ></i>
             </li>
           </ul>
           <!-- /.widgetIcons -->
