added theme change feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- root style -->
     <style>
       :root {
-        --brandColor: rgba(15, 150, 150, 1);
+        --brandColor: rgba(15, 130, 130, 1);
         --fontDark: rgba(0, 0, 0, 1);
         --fontLight: rgba(255, 255, 255, 1);
         --fontPrimary: rgba(220, 220, 220, 0.85);
@@ -22,9 +22,10 @@
       }
 
       .light {
+        --bgDark: rgba(255, 255, 255, 1);
+        --bgLight: rgba(0, 0, 0, 1);
         --fontPrimary: rgba(20, 20, 20, 0.85);
         --fontSecondary: rgba(50, 50, 50, 1);
-
         --bgPrimary: rgba(220, 220, 220, 1);
         --bgSecondary: rgba(200, 200, 200, 1);
         --borderPrimary: rgba(150, 150, 150, 1);
@@ -75,12 +76,6 @@
           <ul class="widgetIcons">
             <li class="iconItem">
               <i class="fa-solid fa-play icon"></i>
-              <!-- <img
-                src="./img/pause_button.png"
-                alt="pause_button"
-                title="Pause Button"
-                class="img"
-              /> -->
             </li>
             <li class="iconItem">
               <i
@@ -124,7 +119,14 @@
             <img src="./img/logo.png" alt="avatar_agent_id" class="img" />
           </div>
           <!-- /.logo -->
-          <div class="brand">iHelpBD</div>
+          <div class="brand">
+            iHelpBD
+            <i
+              class="fa-solid fa-moon icon"
+              title="Sign Out"
+              id="themeChangeBtn"
+            ></i>
+          </div>
           <!-- /.skill -->
         </section>
         <!-- /.box -->
