header logo section modified, removed title

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
       }
 
       .light {
-        --bgDark: rgba(255, 255, 255, 1);
-        --bgLight: rgba(0, 0, 0, 1);
+        --fontDark: rgba(255, 255, 255, 1);
+        --fontLight: rgba(0, 0, 0, 1);
         --fontPrimary: rgba(20, 20, 20, 0.85);
         --fontSecondary: rgba(50, 50, 50, 1);
+        --bgDark: rgba(255, 255, 255, 1);
+        --bgLight: rgba(0, 0, 0, 1);
         --bgPrimary: rgba(220, 220, 220, 1);
         --bgSecondary: rgba(200, 200, 200, 1);
         --borderPrimary: rgba(150, 150, 150, 1);
@@ -73,9 +75,10 @@
             </li>
           </ul>
           <!-- /.callStatus -->
+
           <ul class="widgetIcons">
             <li class="iconItem">
-              <i class="fa-solid fa-play icon"></i>
+              <i class="fa-solid fa-play icon" title="Ready Button"></i>
             </li>
             <li class="iconItem">
               <i
@@ -122,17 +125,16 @@
         </section>
         <!-- /.box -->
         <section class="box right">
-          <div class="logo">
-            <img src="./img/logo.png" alt="avatar_agent_id" class="img" />
-          </div>
+          <img src="./img/logo.png" alt="avatar_agent_id" class="logo" />
+
           <!-- /.logo -->
-          <div class="brand">iHelpBD</div>
-          <!-- /.skill -->
         </section>
         <!-- /.box -->
       </main>
       <!-- /.container -->
     </header>
     <!-- header section ends -->
+
+    <footer id="footer"></footer>
   </body>
 </html>
