working on footer

--- a/index.html
+++ b/index.html
@@ -114,11 +114,7 @@
               ></i>
             </li>
             <li class="iconItem">
-              <i
-                class="fa-solid fa-moon icon"
-                title="Change Theme"
-                id="themeChangeBtn"
-              ></i>
+              <i class="fa-solid fa-moon icon" title="Change Theme"></i>
             </li>
           </ul>
           <!-- /.widgetIcons -->
@@ -135,6 +131,29 @@
     </header>
     <!-- header section ends -->
 
-    <footer id="footer"></footer>
+    <footer id="footer">
+      <div class="inner">
+        <section class="copyright">
+          Copyright &copy; Brand Name. Developed By
+          <a href=""> iHelpBD </a>
+        </section>
+        <!-- /.copyright -->
+        <ul class="footerIcons">
+          <li class="iconItem">
+            <i
+              class="fa-solid fa-moon icon"
+              title="Change Theme"
+              id="themeChangeBtn"
+            ></i>
+          </li>
+          <li class="iconItem">
+            <i class="fa-solid fa-right-from-bracket icon" title="Sign Out"></i>
+          </li>
+        </ul>
+        <!-- /.footerIcons -->
+      </div>
+      <!-- /.inner -->
+    </footer>
+    <!-- /.footer -->
   </body>
 </html>
