changed the position of theme change icon

--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
                 title="Sign Out"
               ></i>
             </li>
+            <li class="iconItem">
+              <i
+                class="fa-solid fa-moon icon"
+                title="Change Theme"
+                id="themeChangeBtn"
+              ></i>
+            </li>
           </ul>
           <!-- /.widgetIcons -->
         </section>
@@ -119,14 +126,7 @@
             <img src="./img/logo.png" alt="avatar_agent_id" class="img" />
           </div>
           <!-- /.logo -->
-          <div class="brand">
-            iHelpBD
-            <i
-              class="fa-solid fa-moon icon"
-              title="Sign Out"
-              id="themeChangeBtn"
-            ></i>
-          </div>
+          <div class="brand">iHelpBD</div>
           <!-- /.skill -->
         </section>
         <!-- /.box -->
