updated footer issues

--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
       <div class="inner">
         <section class="copyright">
           Copyright &copy; Brand Name. Developed By
-          <a href=""> iHelpBD </a>
+          <a href="https://ihelpbd.com/" target="_blank" title="iHelpBD">
+            iHelpBD
+          </a>
         </section>
         <!-- /.copyright -->
         <ul class="footerIcons">
