header responsive issue fixed

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </ul>
           <!-- /.callStatus -->
 
-          <ul class="widgetIcons">
+          <ul class="widgetIcons hideOnMedium">
             <li class="iconItem">
               <i class="fa-solid fa-play icon" title="Ready Button"></i>
             </li>
@@ -130,7 +130,19 @@
       <!-- /.container -->
     </header>
     <!-- header section ends -->
-
+    <main id="contentArea">
+      <section id="headlineSection">
+        <h2 class="headingTitle">Important Messages:</h2>
+        <ul class="headlines">
+          <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু</li>
+          <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু</li>
+          <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু</li>
+        </ul>
+        <!-- /.headlines -->
+      </section>
+      <!-- /.headlineSection -->
+    </main>
+    <!-- /.contentArea -->
     <footer id="footer">
       <div class="inner">
         <section class="copyright">
