headline section design done

--- a/index.html
+++ b/index.html
@@ -132,11 +132,13 @@
     <!-- header section ends -->
     <main id="contentArea">
       <section id="headlineSection">
-        <h2 class="headingTitle">Important Messages:</h2>
+        <h2 class="headlineTitle">Important Notice</h2>
         <ul class="headlines">
-          <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু</li>
-          <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু</li>
-          <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু</li>
+          <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু1</li>
+
+          <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু2</li>
+
+          <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু3</li>
         </ul>
         <!-- /.headlines -->
       </section>
