responsive issue fixed on main content area

--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
       <section id="headlineSection">
         <h2 class="headlineTitle">Important Notice</h2>
         <ul class="headlines">
-          <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু1</li>
+          <li class="headline">
+            খুলনায় বিএনপির বিভাগীয় সমাবেশ বিভাগীয় সমাবেশ শুরু 1
+          </li>
 
           <li class="headline">খুলনায় বিএনপির বিভাগীয় সমাবেশ শুরু2</li>
 
@@ -143,6 +145,7 @@
         <!-- /.headlines -->
       </section>
       <!-- /.headlineSection -->
+      <section id="mainContent"></section>
     </main>
     <!-- /.contentArea -->
     <footer id="footer">
