working on main content area

--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
         <!-- /.headlines -->
       </section>
       <!-- /.headlineSection -->
-      <section id="mainContent"></section>
+      <section id="mainContent">
+        <aside class="col agentView"></aside>
+        <aside class="col callLog"></aside>
+        <aside class="col dialpad"></aside>
+      </section>
     </main>
     <!-- /.contentArea -->
     <footer id="footer">
