working on call log details

--- a/index.html
+++ b/index.html
@@ -147,105 +147,167 @@
       <!-- /.headlineSection -->
       <section id="mainContent">
         <aside class="box agentBox">
-          <h3 class="boxTitle">List of online agents</h3>
-          <div style="overflow-x: auto" class="agents">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>ID</th>
-                  <th>Name</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Jill</td>
-                  <td>Smith</td>
-                  <td>Login</td>
-                </tr>
-                <tr>
-                  <td>Eve</td>
-                  <td>Jackson</td>
-                  <td>Break</td>
-                </tr>
-                <tr>
-                  <td>Adam</td>
-                  <td>Johnson</td>
-                  <td>Pause</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <h3 class="boxTitle">online agent list</h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>Login</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>Break</td>
+              </tr>
+              <tr>
+                <td>Adam</td>
+                <td>Johnson</td>
+                <td>Pause</td>
+              </tr>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>Login</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>Break</td>
+              </tr>
+              <tr>
+                <td>Adam</td>
+                <td>Johnson</td>
+                <td>Pause</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>Break</td>
+              </tr>
+              <tr>
+                <td>Adam</td>
+                <td>Johnson</td>
+                <td>Pause</td>
+              </tr>
+            </tbody>
+          </table>
+          <!-- /.table -->
         </aside>
+        <!-- /.box -->
         <aside class="box logBox">
-          <div style="overflow-x: auto" class="logs">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Take</th>
-                  <th>Pone</th>
-                  <th>Full Name</th>
-                  <th>Wait</th>
-                  <th>Agent</th>
-                  <th>Call Group</th>
-                  <th>Type</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Jill</td>
-                  <td>Smith</td>
-                  <td>Login</td>
-                  <td>Login</td>
-                  <td>Login</td>
-                  <td>Login</td>
-                  <td>Login</td>
-                </tr>
-                <tr>
-                  <td>Jill</td>
-                  <td>Smith</td>
-                  <td>Login</td>
-                  <td>Login</td>
-                  <td>Login</td>
-                  <td>Login</td>
-                  <td>Login</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <h3 class="boxTitle">calls in queue list</h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Take</th>
+                <th>Pone</th>
+                <th>Full Name</th>
+                <th>Wait</th>
+                <th>Agent</th>
+                <th>Call Group</th>
+                <th>Type</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+              </tr>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+              </tr>
+            </tbody>
+          </table>
+          <h3 class="boxTitle">drop call list</h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Take</th>
+                <th>Pone</th>
+                <th>Full Name</th>
+                <th>Wait</th>
+                <th>Agent</th>
+                <th>Call Group</th>
+                <th>Type</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+              </tr>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+                <td>Login</td>
+              </tr>
+            </tbody>
+          </table>
+          <!-- /.table -->
         </aside>
+        <!-- /.box -->
         <aside class="box dialBox">
           <h3 class="boxTitle">Controls</h3>
-          <div style="overflow: auto">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>ID</th>
-                  <th>Name</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Jill</td>
-                  <td>Smith</td>
-                  <td>Login</td>
-                </tr>
-                <tr>
-                  <td>Eve</td>
-                  <td>Jackson</td>
-                  <td>Break</td>
-                </tr>
-                <tr>
-                  <td>Adam</td>
-                  <td>Johnson</td>
-                  <td>Pause</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+
+          <table class="table">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>Login</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>Break</td>
+              </tr>
+              <tr>
+                <td>Adam</td>
+                <td>Johnson</td>
+                <td>Pause</td>
+              </tr>
+            </tbody>
+          </table>
+          <!-- /.table -->
         </aside>
+        <!-- /.box -->
       </section>
+      <!-- /.headlineSection -->
     </main>
     <!-- /.contentArea -->
     <footer id="footer">
