content area responsive issue fixed

--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
     <!-- header section ends -->
     <main id="contentArea">
       <section id="headlineSection">
-        <h2 class="headlineTitle">Notice Board:</h2>
+        <h2 class="headlineTitle">
+          <i class="fa-solid fa-bell"></i>
+          Notice Board:
+        </h2>
         <ul class="headlines">
           <li class="headline">
             খুলনায় বিএনপির বিভাগীয় সমাবেশ বিভাগীয় সমাবেশ শুরু 1
