added fontawesome icons for content area titles

--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@
       <!-- /.headlineSection -->
       <section id="mainContent">
         <aside class="box agentBox">
-          <h3 class="boxTitle">online agent list</h3>
+          <h3 class="boxTitle">
+            <i class="fa-solid fa-users"></i>
+            online agent list
+          </h3>
           <table class="table">
             <thead>
               <tr>
@@ -206,7 +209,10 @@
         </aside>
         <!-- /.box -->
         <aside class="box logBox">
-          <h3 class="boxTitle">calls in queue list</h3>
+          <h3 class="boxTitle">
+            <i class="fa-solid fa-anchor"></i>
+            calls in queue list
+          </h3>
           <table class="table">
             <thead>
               <tr>
@@ -240,7 +246,10 @@
               </tr>
             </tbody>
           </table>
-          <h3 class="boxTitle">drop call list</h3>
+          <h3 class="boxTitle">
+            <i class="fa-solid fa-phone-slash"></i>
+            drop call list
+          </h3>
           <table class="table">
             <thead>
               <tr>
@@ -278,7 +287,10 @@
         </aside>
         <!-- /.box -->
         <aside class="box dialBox">
-          <h3 class="boxTitle">Controls</h3>
+          <h3 class="boxTitle">
+            <i class="fa-solid fa-headset"></i>
+            Controls
+          </h3>
 
           <table class="table">
             <thead>
