create new modal window

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
 
           <ul class="widgetIcons hideOnMedium">
             <li class="iconItem">
-              <i class="fa-solid fa-play icon" title="Ready Button"></i>
+              <i
+                class="fa-solid fa-play icon"
+                id="modalBtn"
+                title="Ready Button"
+              ></i>
             </li>
             <li class="iconItem">
               <i
